--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "platzi-intro-react-base",
   "version": "0.1.0",
+  "homepage": "https://valczny.github.io/Tasks-App/",
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
@@ -11,6 +12,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -29,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
